<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".scores">

    <TextView
        android:id="@+id/high_score_header_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/consola"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:text="@string/scores_header" />

    <TextView
        android:id="@+id/current_total_points_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/high_score_header_view"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/consola"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:text="@string/player_total_score_txt" />


    <TextView
        android:id="@+id/scores_rank_1_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/current_total_points_view"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/consola"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:text="@string/score_rank_1_txt" />

    <TextView
        android:id="@+id/scores_rank_2_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scores_rank_1_view"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/consola"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:text="@string/score_rank_2_txt" />

    <TextView
        android:id="@+id/scores_rank_3_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scores_rank_2_view"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/consola"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:text="@string/score_rank_3_txt" />

    <TextView
        android:id="@+id/scores_rank_4_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scores_rank_3_view"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/consola"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:text="@string/score_rank_4_txt" />

    <TextView
        android:id="@+id/scores_rank_5_view"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scores_rank_4_view"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/consola"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:text="@string/score_rank_5_txt" />
</RelativeLayout>