<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".main_menu">

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_custom_button_background"
        android:fontFamily="monospace"
        android:onClick="playButtonClicked"
        android:text="@string/play"
        android:textColor="@color/text_color" />

    <Button
        android:layout_below="@id/play_button"
        android:id="@+id/scores_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_custom_button_background"
        android:fontFamily="monospace"
        android:onClick="scoresButtonClicked"
        android:text="@string/score"
        android:textColor="@color/text_color" />

    <Button
        android:layout_below="@id/scores_button"
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_custom_button_background"
        android:fontFamily="monospace"
        android:onClick="exitButtonClicked"
        android:text="@string/exit"
        android:textColor="@color/text_color" />

</RelativeLayout>