<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <Button
        android:id="@+id/game_button_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/game_player_input_view"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/ic_custom_button_background"
        android:fontFamily="monospace"
        android:text="@string/game_button_text"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/game_player_input_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/game_hint_view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/ic_custom_button_background"
        android:ems="10"
        android:fontFamily="@font/consola"
        android:hint="@string/game_editTextView_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/black" />

    <TableLayout
        android:id="@+id/game_status_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"

        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/game_level_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@drawable/ic_custom_button_background"
                android:fontFamily="@font/consola"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/game_numberOfTries_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/ic_custom_button_background"
                android:fontFamily="@font/consola"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/game_number_of_tries"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/game_total_points_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:background="@drawable/ic_custom_button_background"
                android:fontFamily="@font/consola"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/total_points"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/game_mainText_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_status_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/game_main_text"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/game_hint_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_mainText_view"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/consola"
        android:text="Hint: Number is between 0 and 20"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/game_generating_number_animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_progress_bar"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/consola"
        android:text="0"
        android:textColor="@color/black" />

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/number_progress_bar"
        style="@style/NumberProgressBar_Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_hint_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        app:progress_max="100" />


</RelativeLayout>

    <!-- TODO: Come back to change the text Format for Hint TextView -->